--- a/flink-processor/pom.xml
+++ b/flink-processor/pom.xml
@@ -20,8 +20,8 @@ under the License.
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>frauddetection</groupId>
-    <artifactId>frauddetection</artifactId>
+    <groupId>weather</groupId>
+    <artifactId>weather</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
 
@@ -159,7 +159,7 @@ under the License.
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>spendreport.FraudDetectionJob</mainClass>
+                                    <mainClass>spendreport.weatherJob</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
